--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+cvxpy==1.3.2
 yfinance==0.2.18
 pandas==2.0.1
 numpy==1.24.3
@@ -6,3 +7,4 @@ seaborn==0.12.2
 matplotlib==3.7.1
 altair==4.2.2
 pyfolio==0.9.2
+
